fix comment titles overflowing

--- a/src/front/ui/components/panel-parts/style.scss
+++ b/src/front/ui/components/panel-parts/style.scss
@@ -26,8 +26,6 @@
         .fl-asst-screen-title-text {
             flex: 1 1 auto;
             overflow: hidden;
-    		text-overflow: ellipsis;
-    		white-space: nowrap;
         }
 
         &:last-child {
